<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>promotions-platform-AutomationTest</groupId>
	<artifactId>promotions-platform-AutomationTest</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<powermock.version>2.0.2</powermock.version>
		<application.insights.version>2.5.1</application.insights.version>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M4</version>
				<configuration>
					<systemPropertyVariables>
						<environment>${env}</environment>
					</systemPropertyVariables>
					<additionalClasspathElements>
						<additionalClasspathElement>${basedir}/target/classes
						</additionalClasspathElement>
					</additionalClasspathElements>
					<parallel>classes</parallel>
					<threadCount>8</threadCount>
					<threadCountClasses>2</threadCountClasses>
					<!-- <useUnlimitedThreads>true</useUnlimitedThreads> -->
					<!-- <argLine>-Xmx2048M -XX:MaxPermSize=2048M</argLine> -->
					<!-- <parallel>all</parallel>
					<threadCount>16</threadCount>
					<perCoreThreadCount>false</perCoreThreadCount> -->
					<forkCount>3</forkCount>
					<reuseForks>false</reuseForks>
					<argLine>-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MinHeapFreeRatio=20 -XX:MaxHeapFreeRatio=40 -XX:AdaptiveSizePolicyWeight=90 -XX:MaxRAMFraction=1</argLine>
					<includes>
						<include>**/*Test.java</include>
					</includes>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<target>1.8</target>
				</configuration>
			</plugin>

		</plugins>


	</build>

	<dependencies>
		<dependency>
			<groupId>net.sf.saxon</groupId>
			<artifactId>Saxon-HE</artifactId>
			<version>9.9.0-2</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
		</dependency>
		<dependency>
			<groupId>org.modelmapper</groupId>
			<artifactId>modelmapper</artifactId>
			<version>2.3.5</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.27.0</version>
			<scope>test</scope>
		</dependency>
		<!-- <dependency> <groupId>com.walmart.sams.mercury.api</groupId> <artifactId>mercury-dto</artifactId> 
			<version>${version.mercury-dto}</version> </dependency> -->

		<dependency>
			<groupId>com.microsoft.azure</groupId>
			<artifactId>azure-cosmosdb</artifactId>
			<version>2.4.3</version>
		</dependency>
		<dependency>
			<groupId>com.microsoft.azure</groupId>
			<artifactId>azure-servicebus</artifactId>
			<version>1.2.5</version>
		</dependency>
		<dependency>
			<groupId>com.nimbusds</groupId>
			<artifactId>lang-tag</artifactId>
			<version>1.4.4</version>
		</dependency>
		<dependency>
			<groupId>com.nimbusds</groupId>
			<artifactId>nimbus-jose-jwt</artifactId>
			<version>7.1</version>
		</dependency>
		<dependency>
			<groupId>net.minidev</groupId>
			<artifactId>json-smart</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>com.sams.promotions.platform</groupId>
			<artifactId>promotions-platform-common</artifactId>
			<version>0.0.59</version>
		</dependency>
		<dependency>
			<groupId>com.sams.promotions.platform</groupId>
			<artifactId>promotions-platform-dal</artifactId>
			<version>0.0.30-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>ibm.db2</groupId>
			<artifactId>db2jcc4.jar</artifactId>
			<version>4.21.29</version>
		</dependency>
		<dependency>
			<groupId>com.sams.promotions.platform</groupId>
			<artifactId>emulation-api</artifactId>
			<version>0.0.64</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.2.5</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>5.2.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.2.5</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-spring</artifactId>
			<version>1.2.5</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>

		<dependency>
			<groupId>com.vimalselvam</groupId>
			<artifactId>cucumber-extentsreport</artifactId>
			<version>3.1.1</version>
		</dependency>

		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>3.1.1</version>
		</dependency>

		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>3.3.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>2.3.28</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>3.2.4.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>java-hamcrest</artifactId>
			<version>2.0.0.0</version>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>2.1</version>
		</dependency>


		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>2.2.1.RELEASE</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>com.vaadin.external.google</groupId>
					<artifactId>android-json</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>com.microsoft.azure</groupId>
			<artifactId>azure-documentdb</artifactId>
			<version>2.4.4</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.2</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.8</version>
			<scope>provided</scope>
		</dependency>


		<dependency>
			<groupId>com.sams.membership.nextgen</groupId>
			<artifactId>membership-reactive-starter-cosmosdb</artifactId>
			<version>1.0.2</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.walmart.sams.mercury.api</groupId>
			<artifactId>mercury-dto</artifactId>
			<version>1.0.5</version>
		</dependency>
	</dependencies>
</project>